[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/ui/module_options_menu_buttons/drop_default.png" type="Texture" id=1]
[ext_resource path="res://sprites/ui/module_options_menu_buttons/equip_hover.png" type="Texture" id=2]
[ext_resource path="res://sprites/ui/module_options_menu_buttons/equip_pressed.png" type="Texture" id=3]
[ext_resource path="res://sprites/ui/module_options_menu_buttons/drop_hover.png" type="Texture" id=4]
[ext_resource path="res://sprites/ui/module_options_menu_buttons/equip_default.png" type="Texture" id=5]
[ext_resource path="res://sprites/ui/weapon_rarity_ui_bronze.png" type="Texture" id=6]
[ext_resource path="res://sprites/ui/module_options_menu_buttons/info_default.png" type="Texture" id=7]
[ext_resource path="res://sprites/ui/module_options_menu_buttons/info_pressed.png" type="Texture" id=8]
[ext_resource path="res://sprites/ui/module_options_menu_buttons/info_hover.png" type="Texture" id=9]
[ext_resource path="res://sprites/ui/module_options_menu_buttons/drop_pressed.png" type="Texture" id=10]
[ext_resource path="res://fonts/pixel_font.tres" type="DynamicFont" id=11]
[ext_resource path="res://sprites/weapons/magic_weapons/old_goblins_magic_wand.png" type="Texture" id=12]
[ext_resource path="res://scripts/ui/weapon_rarity_bg.gd" type="Script" id=13]

[node name="weapon_slot" type="Control"]
margin_right = 202.0
margin_bottom = 238.0
script = ExtResource( 13 )

[node name="weapon_rarity_bg" type="TextureRect" parent="."]
margin_left = 150.0
margin_top = 188.0
margin_right = 200.0
margin_bottom = 249.0
rect_scale = Vector2( 7, 7 )
rect_pivot_offset = Vector2( 25, 30.5 )
texture = ExtResource( 6 )

[node name="main_button" type="TextureButton" parent="."]
anchor_left = 0.51
anchor_top = 0.5
anchor_right = 0.51
anchor_bottom = 0.5
margin_left = -87.0199
margin_top = -87.0
margin_right = -43.0199
margin_bottom = -29.9999
rect_scale = Vector2( 7, 7 )
button_mask = 2

[node name="weapon_texture" type="TextureRect" parent="main_button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.0
margin_top = -28.5
margin_right = 22.0
margin_bottom = 28.5
texture = ExtResource( 12 )
stretch_mode = 4

[node name="options_with_weapon" type="Control" parent="."]
margin_left = 82.0
margin_top = 108.0
margin_right = 110.0
margin_bottom = 137.0
rect_scale = Vector2( 7, 7 )

[node name="unequip_button" type="TextureButton" parent="options_with_weapon"]
margin_left = 1.0
margin_top = 1.0
margin_right = 27.0
margin_bottom = 11.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 2 )

[node name="new_label" type="Label" parent="options_with_weapon/unequip_button"]
margin_left = -0.142853
margin_top = 0.714294
margin_right = 281.857
margin_bottom = 86.0038
rect_scale = Vector2( 0.1, 0.1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 11 )
text = "unequip"

[node name="info_button" type="TextureButton" parent="options_with_weapon"]
margin_top = 10.0
margin_right = 28.0
margin_bottom = 20.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 9 )

[node name="new_label" type="Label" parent="options_with_weapon/info_button"]
margin_left = 7.5
margin_top = -3.05176e-05
margin_right = 202.5
margin_bottom = 85.2895
rect_scale = Vector2( 0.1, 0.1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 11 )
text = "info"

[node name="drop_button" type="TextureButton" parent="options_with_weapon"]
margin_top = 20.0
margin_right = 28.0
margin_bottom = 30.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 4 )

[node name="new_label" type="Label" parent="options_with_weapon/drop_button"]
margin_left = 6.42856
margin_top = -1.78571
margin_right = 201.429
margin_bottom = 83.5038
rect_scale = Vector2( 0.1, 0.1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 11 )
text = "drop"

[connection signal="pressed" from="main_button" to="." method="_on_main_button_pressed"]
[connection signal="pressed" from="options_with_weapon/unequip_button" to="." method="_on_unequip_button_pressed"]
